// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostService Commennt should comment a post without images 1`] = `
{
  "author": {
    "name": "John Doe",
    "profileImg": null,
    "username": "johndoe",
  },
  "createdAt": 2000-01-01T00:00:00.000Z,
  "id": "id-1",
  "images": [],
  "isLiked": false,
  "likes": 0,
  "parent": {
    "author": {
      "username": "johndoe",
    },
  },
  "parentId": null,
  "replies": 0,
  "text": "This is a post",
}
`;

exports[`PostService Commennt should create a post with images 1`] = `
{
  "author": {
    "name": "John Doe",
    "profileImg": null,
    "username": "johndoe",
  },
  "createdAt": 2000-01-01T00:00:00.000Z,
  "id": "id-1",
  "images": [
    {
      "id": "id-1",
      "url": "https://example.com/image1.jpg",
    },
  ],
  "isLiked": false,
  "likes": 0,
  "parent": {
    "author": {
      "username": "johndoe",
    },
  },
  "parentId": null,
  "replies": 0,
  "text": "This is a post",
}
`;

exports[`PostService Create should create a post with images 1`] = `
{
  "author": {
    "name": "John Doe",
    "profileImg": null,
    "username": "johndoe",
  },
  "createdAt": 2000-01-01T00:00:00.000Z,
  "id": "id-1",
  "images": [
    {
      "id": "id-1",
      "url": "https://example.com/image1.jpg",
    },
  ],
  "isLiked": false,
  "likes": 0,
  "parentId": null,
  "replies": 0,
  "text": "This is a post",
}
`;

exports[`PostService Create should create a post without images 1`] = `
{
  "author": {
    "name": "John Doe",
    "profileImg": null,
    "username": "johndoe",
  },
  "createdAt": 2000-01-01T00:00:00.000Z,
  "id": "id-1",
  "images": [],
  "isLiked": false,
  "likes": 0,
  "parentId": null,
  "replies": 0,
  "text": "This is a post",
}
`;

exports[`PostService FindMany should return an array of post 1`] = `
{
  "count": 1,
  "items": [
    {
      "author": {
        "name": "John Doe",
        "profileImg": null,
        "username": "johndoe",
      },
      "createdAt": 2000-01-01T00:00:00.000Z,
      "id": "id-1",
      "images": [
        {
          "id": "id-1",
          "url": "https://example.com/image1.jpg",
        },
      ],
      "isLiked": false,
      "likes": 0,
      "parentId": null,
      "replies": 0,
      "text": "This is a post",
    },
  ],
}
`;

exports[`PostService FindOne should return a post 1`] = `
{
  "author": {
    "name": "John Doe",
    "profileImg": null,
    "username": "johndoe",
  },
  "comments": [],
  "createdAt": 2000-01-01T00:00:00.000Z,
  "id": "id-1",
  "images": [
    {
      "id": "id-1",
      "url": "https://example.com/image1.jpg",
    },
  ],
  "isLiked": false,
  "likes": 0,
  "parent": null,
  "parentId": null,
  "replies": 0,
  "text": "This is a post",
}
`;
